prevent overflow of event cards.

--- a/src/scss/modules/_event-cards.scss
+++ b/src/scss/modules/_event-cards.scss
@@ -2,7 +2,7 @@
   background-color: $white;
   border-top: .5rem solid $primary-green;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
-  height: 42rem;
+  height: 46rem;
   margin: 3rem 1rem;
   text-align: left;
 
